--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ul {
+    @apply list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
